# cpp-code-to-installer

./: .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  conanfile.txt  installer.nsi
src/: compressor.cpp  compressor.h  main.cpp
